<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    style="@style/MyEstilo">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="310dp">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="220dp"
            android:id="@+id/imageView1"
            android:src="@drawable/balcon"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:layout_margin="0dp"
            android:onClick="imgFoto"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <Button
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:onClick="btRotarIzq"
                android:text="@string/btRotarIzq" />

            <Button
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:text="@string/btRotarDer"
                android:onClick="btRotarDer"/>

            <Button
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btBlancoNegro"
                android:id="@+id/button3"
                android:onClick="btBlancoNegro"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp">

            <Button
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btAbrirFotosInternas"
                android:id="@+id/button4"
                android:onClick="btAbrirFotosInternas"/>

            <Button
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btColores"
                android:id="@+id/button5"
                android:onClick="btAbrirColores"/>

            <Button
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/btCamara"
                android:id="@+id/button6"
                android:onClick="btCamara"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:weightSum="1">

            <ZoomControls
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/zoomControls"
                android:layout_gravity="center_horizontal"
                android:onClick="btZoom"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
