<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:id="@+id/imgColores" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tvVerde"
            android:id="@+id/textView3"
            android:textSize="25dp"
            android:layout_weight="1" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/etVerde"
            android:layout_weight="1" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="New Button"
            android:id="@+id/button8"
            android:onClick="btVerde"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:text="@string/tvRojo"
            android:id="@+id/textView"
            android:textSize="25dp" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/etRojo"
            android:layout_weight="1" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="New Button"
            android:id="@+id/btColores"
            android:onClick="btcolores"
            android:layout_weight="0.40" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tvAzul"
            android:id="@+id/textView2"
            android:textSize="25dp"
            android:layout_weight="1" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/etAzul"
            android:layout_weight="1" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="New Button"
            android:id="@+id/button9"
            android:onClick="btAzul"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

</LinearLayout>